<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_feed">New Feed</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="internet_not_available">Internet is not available!</string>
</resources>
