<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nguyenngocsonc.myapplication.signin.SigninActivity"
    android:background="@color/colorMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_feed"
            android:textSize="30sp"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/username"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@color/colorWhite"
            android:text="@string/sign_in"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/colorMain"
            android:id="@+id/btn_sign_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorWhite"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:background="@android:color/transparent"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:id="@+id/btn_sign_up"/>

    </LinearLayout>
</LinearLayout>
